# carbon-commute-calculator

./: .gitignore  README.md  main.py  pyproject.toml
design/: class_diagram.md  design_sequence_diagrams.md  domain_model.md  project_outline_draft.md  settings_sequence_diagram.md  stats_sequence_diagram.md  system_sequence_diagrams.md  use_case_model.md  vehicle_settings_sequence_diagram.md
docs/: Project Final Presentation.odp  glossary.md  project_outline_draft.md
html/: main.html  search.js  src.html
html/src/: carbon_commute.html  route.html  trip.html  vehicle.html
models/: calculator_sequence_diagram.md  vehicle_settings_sequence_diagram.md
process/: meeting_notes.md
src/: __init__.py  carbon_commute.py  route.py  test_route.py  trip.py  vehicle.py
tests/: test_carbon_commute.py  test_route.py  test_trip.py  test_vehicle.py
